--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/reveal.css">
-	<link rel="stylesheet" href="css/theme/blood.css">
+	<link rel="stylesheet" href="css/stuff.css">
+	<link rel="stylesheet" href="css/theme/white.css">
 
 	<!-- Theme used for syntax highlighting of code -->
 	<link rel="stylesheet" href="lib/css/monokai.css">
@@ -27,7 +28,24 @@
 <body>
 	<div class="reveal">
 		<div class="slides">
-			<section data-markdown="Talk.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n" data-separator-notes="^Note:"></section>
+			<section data-markdown="slides/intro.md"></section>
+			<section>
+				<div id="presentacion">
+					<img src="img/me.jpg" />
+					<h4>Middleware Consultant</h4>
+					<div></div>
+					<img src="img/rh.png">
+				</div>
+			</section>
+			<section data-markdown="slides/adopcion.md"></section>
+			<section data-markdown="slides/discover.md"></section>
+			<section data-markdown="slides/pilot.md"></section>
+			<section data-markdown="slides/prep.md"></section>
+			<section data-markdown="slides/imp.md"></section>
+			<section data-markdown="slides/opt.md"></section>
+			<section data-markdown>
+				### demo
+			</section>
 		</div>
 	</div>
 
