--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/reveal.css">
 	<link rel="stylesheet" href="css/stuff.css">
-	<link rel="stylesheet" href="css/theme/white.css">
+	<link rel="stylesheet" href="css/theme/night.css">
 
 	<!-- Theme used for syntax highlighting of code -->
 	<link rel="stylesheet" href="lib/css/monokai.css">
@@ -35,6 +35,9 @@
 					<h4>Middleware Consultant</h4>
 					<div></div>
 					<img src="img/rh.png">
+				</div>
+				<div id="redes">
+					in/casimon-rh  |  ✉️ casimon@redhat.com
 				</div>
 			</section>
 			<section data-markdown="slides/adopcion.md"></section>
