--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<img src="img/rh.png">
 				</div>
 				<div id="redes">
-					in/casimon-rh  |  ✉️ casimon@redhat.com
+					in/casimon-rh  |  ✉️ casimon@redhat.com  |  😺 github.com/casimon-rh
 				</div>
 			</section>
 			<section data-markdown="slides/adopcion.md"></section>
@@ -48,6 +48,13 @@
 			<section data-markdown="slides/opt.md"></section>
 			<section data-markdown>
 				### demo
+			</section>
+			<section data-markdown>
+				### Links
+
+				* github.com/casimon-rh/devops-talk
+				* github.com/casimon-rh/devops-talk-demo
+
 			</section>
 		</div>
 	</div>
