--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
 				* github.com/casimon-rh/devops-talk-demo
 
 			</section>
+			
+			<section data-markdown>
+				### gracias
+			</section>
 		</div>
 	</div>
 
